--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,103 @@
+2004-08-11  Martin Stjernholm  <bug-cc-mode@gnu.org>
+
+	CC Mode update to 5.30.9:
+
+	* progmodes/cc-defs.el, progmodes/cc-vars.el (c-emacs-features):
+	Moved from cc-vars to cc-defs for dependency reasons.  Fixed the
+	POSIX char class test to check that it works in
+	`skip-chars-(forward|backward)' too.
+
+	* progmodes/cc-align.el (c-lineup-arglist): Fixed bug when the
+	first argument starts with a special brace list.
+
+	* progmodes/cc-engine.el (c-forward-type): Fixed promotion bug
+	when `c-opt-type-concat-key' is used (i.e. in Pike).
+
+	* progmodes/cc-engine.el (c-looking-at-special-brace-list): Fixed
+	bug when the inner char pair doesn't have paren syntax, i.e. "(<
+	>)".
+
+	* progmodes/cc-align.el (c-lineup-multi-inher): Made it syntactic
+	whitespace safe.
+
+	* progmodes/cc-engine.el (c-guess-basic-syntax): Fixed anchor
+	position for `arglist-intro', `arglist-cont-nonempty' and
+	`arglist-close' when there are two arglist open parens on the same
+	line and there's nothing in front of the first.
+
+	* progmodes/cc-fonts.el (c-basic-matchers-before): Fixed font
+	locking of qualified names in Java, which previously could fontify
+	common indexing expressions in many cases.  The standard Java
+	naming conventions are used to tell them apart.
+
+	* progmodes/cc-align.el (c-lineup-whitesmith-in-block): Fixed
+	inconsistency wrt opening parens on the first line inside a paren
+	block.
+
+	* progmodes/cc-defs.el (c-langs-are-parametric): Must be known at
+	compile time for the sake of `c-major-mode-is'.
+
+	(c-mode-is-new-awk-p): Made it a macro to delay expansion of
+	`c-major-mode-is' in the event that this is used inside a
+	`c-lang-defconst'.
+
+	* progmodes/cc-defs.el (c-major-mode-is): Fixed expansion inside
+	`c-lang-defconst' so that it works better with fallback languages.
+
+	* progmodes/cc-defs.el (c-add-language): Fixed a typo that caused
+	it to fail to record the base mode.
+
+	* progmodes/cc-engine.el (c-syntactic-re-search-forward): Fixed
+	bug so that it doesn't go past the closing paren when PAREN-LEVEL
+	is used.  Reordered the syntax checks to get more efficient
+	skipping in some situations.
+
+	* progmodes/cc-cmds.el (c-electric-brace): Don't trip up on a line
+	continuation which might precede the newly inserted '{'.
+
+	* progmodes/cc-engine.el (c-syntactic-re-search-forward): Fixed
+	cases where it could loop indefinitely.
+
+	* progmodes/cc-fonts.el (c-font-lock-declarators): Handle array
+	size specs correctly.  Only fontify identifiers in front of '('
+	with as functions - don't accept any paren char.  Tightened up
+	initializer skipping to stop before function and class blocks.
+
+	* progmodes/cc-engine.el (c-beginning-of-decl-1): Fixed bug where
+	the point could be left directly after an open paren when finding
+	the beginning of the first decl in the block.
+
+	* progmodes/cc-engine.el (c-parse-state): Don't use the syntax
+	table when filtering out legitimate open parens to be recorded.
+	This could cause cache inconsistencies when e.g.
+	`c++-template-syntax-table' was temporarily in use.
+
+	* progmodes/cc-engine.el (c-on-identifier,
+	c-simple-skip-symbol-backward): Small fix for handling "-"
+	correctly in `skip-chars-backward'.  Affected the operator lfun
+	syntax in Pike.
+
+	* progmodes/cc-engine.el (c-invalidate-sws-region-after): Fixed
+	bug that could cause an error from `after-change-functions' when
+	the changed region is at bob.
+
+2004-08-11  Alan Mackenzie  <bug-cc-mode@gnu.org>
+
+	CC Mode update to 5.30.9:
+
+	* progmodes/cc-cmds.el, progmodes/cc-vars.el: Amend doc(-strings)
+	to say that <TAB> doesn't insert WS into a CPP line.
+	(c-indent-command, c-tab-always-indent): Amend doc strings.
+
+	* progmodes/cc-styles.el, progmodes/cc-engine.el: Add in two
+	checks for user errors, thus eliminating cryptic and unhelpful
+	Emacs error messages.  (1) Check the arg to `c-set-style' is a
+	string.  (2) Check that settings to `c-offsets-alist' are not
+	spuriously quoted.
+
+	* progmodes/cc-cmds.el: (c-electric-brace): don't delete a comment
+	which precedes the newly inserted `{'.
+
 2004-08-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	Sync with Tramp 2.0.44.
