--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -6,7 +6,7 @@
 	(speedbar-insert-files-at-point): Take an extra argument and use
 	it to optionally find out if a subdir is empty.  Also unreadable
 	files don't get expand buttons.
-	(speedbar-directory-plus): New image (bitmap already existed unused).
+	(speedbar-directory): New image (unused pixmap already existed).
 	(speedbar-expand-image-button-alist): Use it.
 
 2004-08-11  Martin Stjernholm  <bug-cc-mode@gnu.org>
