--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* Makefile.in (../info/tramp, tramp.dvi): Depend on trampver.texi.
+
 2004-08-13  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* regs.texi (RegNumbers): Mention `C-x r i' binding for
