--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-14  Eric Hanchrow  <offby1@blarg.net>
+
+	* TUTORIAL.es: Replace actual whitespace with the magic string
+	that causes help-with-tutorial to automatically insert the correct
+	amount.
+
 2004-08-10  Steven Tamm  <steventamm@mac.com>
 
 	* PROBLEMS: Remove description of Mac OS version upgrade
