Mention the thumbs.el package.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -1966,8 +1966,11 @@ source files.  See the Flymake's Info manual for more details.
 of hierarchical data as an outline.  For example, the tree-widget is
 well suited to display a hierarchy of directories and files.
 
-** The wdired.el package allows you to use normal editing commands on dired
+** The wdired.el package allows you to use normal editing commands on Dired
 buffers to change filenames, permissions, etc...
+
+** The thumbs.el package allows you to preview image files as thumbnails
+and can be invoked from a Dired buffer.
 
 ** The new python.el package is used to edit Python and Jython programs.
 
