--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-15  Bill Wohler  <wohler@newt.com>
+
+	* NEWS, MH-E-NEWS: Upgraded to MH-E version 7.4.80.
+
 2004-08-14  Romain Francoise  <romain@orebokech.com>
 
 	* NEWS: Mention the thumbs.el package.
