--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-15  Kenichi Handa  <handa@m17n.org>
+
+	* term/x-win.el (x-selection-value): If utf8 was successful but
+	ctext was not, use utf8 string.
+
 2004-08-14  Davis Herring  <herring@lanl.gov>
 
 	* isearch.el: Remove accidental changes of March 4.  Fix backing
