--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Kenichi Handa  <handa@m17n.org>
+
+	* ps-mule.el (ps-mule-font-info-database): Fix docstring.
+
 2004-08-15  Kenichi Handa  <handa@m17n.org>
 
 	* term/x-win.el (x-selection-value): If utf8 was successful but
